# projects

./: .gitignore  CLAUDE.md  GAMIFICATION_PLAN.md  MCP_SUMMARY.txt  NEXT_STEPS.md  QUICK_START.md  README.md  SCREENSHOT_PROCESSING.md  SESSION_3_SUMMARY.md  claude-progress.txt  feature_list.json  import_workouts.py  mcp-config-template.json  ruff.toml  run-alembic.js  run-seed.js  setup-mcps.sh  start-backend.js  test-profile.js  test-sync.js  test-workouts.js  update-feature.js
Fitness/: AGENT_CONTEXT.md  (+1 more)
Fitness/strength-coach/: GUIDE.md  README.md  pyproject.toml
Fitness/strength-coach/examples/: sample_weighins.json  sample_workout.json
Fitness/strength-coach/src/strength_coach/: __init__.py  main.py
Fitness/strength-coach/src/strength_coach/agent/: __init__.py  persona.py  prompt_builder.py
Fitness/strength-coach/src/strength_coach/analytics/: __init__.py  e1rm.py  intensity.py  prs.py  trends.py  volume.py
Fitness/strength-coach/src/strength_coach/cli/: __init__.py  commands.py
Fitness/strength-coach/src/strength_coach/ingestion/: __init__.py  screenshot.py  sheets.py
Fitness/strength-coach/src/strength_coach/models/: __init__.py  activity.py  bodyweight.py  exercises.py  program.py  workout.py
Fitness/strength-coach/src/strength_coach/percentiles/: __init__.py  base.py  placeholder.py
Fitness/strength-coach/src/strength_coach/recomp/: __init__.py  inference.py  weight_trends.py
Fitness/strength-coach/src/strength_coach/reporting/: __init__.py  markdown.py  recommendations.py  weekly_review.py
Fitness/strength-coach/tests/: conftest.py  test_e1rm.py  test_prs.py  test_volume.py  test_weight_trends.py
chief-of-staff/web/src-tauri/: Cargo.toml  tauri.conf.json
chief-of-staff/web/src-tauri/capabilities/: default.json
chief-of-staff/web/src-tauri/icons/: icon.icns
chief-of-staff/web/src-tauri/src/: lib.rs  main.rs  oauth.rs  tray.rs
(+858 files in other folders)
