[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strength-coach"
version = "0.1.0"
description = "Personal strength and recomposition tracking coach"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nick Chua" }
]
dependencies = [
    "pydantic>=2.0",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "matplotlib>=3.7",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
sheets = [
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]
all = [
    "anthropic>=0.40.0",
    "google-auth>=2.0",
    "google-api-python-client>=2.0",
]

[project.scripts]
coach = "strength_coach.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/strength_coach"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
